--- a/src/main/resources/vm/welcome.vm
+++ b/src/main/resources/vm/welcome.vm
@@ -48,7 +48,7 @@
         .echarts {
             margin: 0 auto;
             width: 90%;
-            height: 500px;
+            height: 300px;
         }
 
         #table {
@@ -73,9 +73,7 @@
     <div class="echarts" id="echarts"></div>
 </div>
 
-<div id="table" hidden>
-    <table class="layui-table" id="tab_monitor" lay-filter="tab_monitor"></table>
-</div>
+<table class="layui-table" id="tab_monitor" lay-filter="tab_monitor"></table>
 </body>
 <script>
     function loadSuccess() {
@@ -110,17 +108,17 @@
             // height: 'full-52',
             even: true,
             cols: [[
-                {field: 'pid', title: '进程id', sort: true},
-                {field: 'USER', title: '所有者',},
-                {field: 'PR', title: '优先级',},
-                {field: 'NI', title: 'nice值'},
-                {field: 'VIRT', title: '使用虚拟内存'},
-                {field: 'RES', title: '使用物理内存',},
-                {field: 'SHR', title: '共享内存'},
-                {field: 'S', title: '进程状态'},
-                {field: 'CPU', title: '占用CPU',},
-                {field: 'MEM', title: '占用物理内存'},
-                {field: 'TIME', title: '时间总计'},
+                {field: 'pid', title: '进程id', sort: true, width: '8%'},
+                {field: 'USER', title: '所有者', width: '12%'},
+                {field: 'PR', title: '优先级', width: '8%'},
+                {field: 'NI', title: 'nice值', width: '8%'},
+                {field: 'VIRT', title: '使用虚拟内存', width: '8%'},
+                {field: 'RES', title: '使用物理内存', width: '8%'},
+                {field: 'SHR', title: '共享内存', width: '8%'},
+                {field: 'S', title: '进程状态', width: '8%'},
+                {field: 'CPU', title: '占用CPU', width: '8%'},
+                {field: 'MEM', title: '占用物理内存', width: '8%'},
+                {field: 'TIME', title: '时间总计', width: '8%'},
                 {field: 'COMMAND', title: '进程名称'}
             ]],
             loading: true,
@@ -129,11 +127,6 @@
                 statusCode: 200
             },
             done: function (data) {
-                if (data.code == 200) {
-                    if (data.data) {
-                        $("#table").attr("hidden", false);
-                    }
-                }
             }
         });
 
@@ -185,7 +178,7 @@
                 info = {
                     name: 'cpu',
                     type: 'pie',
-                    center: ['30%', '40%'],
+                    center: ['25%', '45%'],
                     radius: ['20%', '40%'],
                     data: cpu
                 }
@@ -196,7 +189,7 @@
                 info = {
                     name: '内存',
                     type: 'pie',
-                    center: ['70%', '40%'],
+                    center: ['65%', '45%'],
                     radius: ['20%', '40%'],
                     data: memory
                 }
@@ -214,6 +207,7 @@
             }
             myEcharts.setOption(option);
         }
+
     }
 </script>
 
