websocket 自动识别协议

--- a/src/main/resources/vm/common/head.vm
+++ b/src/main/resources/vm/common/head.vm
@@ -43,4 +43,9 @@
         // 创建完后切换
         element.tabChange('mainTabs', lay_id);
     }
+
+    function getSocketHost() {
+        var pro = location.protocol === 'https:' ? 'wss://' : 'ws://';
+        return pro + window.location.host;
+    }
 </script>
