首页线程列表排序修改

--- a/src/main/resources/vm/welcome.vm
+++ b/src/main/resources/vm/welcome.vm
@@ -110,15 +110,15 @@
             cols: [[
                 {field: 'pid', title: '进程id', sort: true, width: '8%'},
                 {field: 'USER', title: '所有者', width: '12%'},
-                {field: 'PR', title: '优先级', width: '8%'},
-                {field: 'NI', title: 'nice值', width: '8%'},
-                {field: 'VIRT', title: '使用虚拟内存', width: '8%'},
-                {field: 'RES', title: '使用物理内存', width: '8%'},
-                {field: 'SHR', title: '共享内存', width: '8%'},
-                {field: 'S', title: '进程状态', width: '8%'},
-                {field: 'CPU', title: '占用CPU', width: '8%'},
-                {field: 'MEM', title: '占用物理内存', width: '8%'},
-                {field: 'TIME', title: '时间总计', width: '8%'},
+                {field: 'PR', title: '优先级', width: '8%', sort: true},
+                {field: 'NI', title: 'nice值', width: '8%', sort: true},
+                {field: 'VIRT', title: '使用虚拟内存', width: '8%', sort: true},
+                {field: 'RES', title: '使用物理内存', width: '8%', sort: true},
+                {field: 'SHR', title: '共享内存', width: '8%', sort: true},
+                {field: 'S', title: '进程状态', width: '8%', sort: true},
+                {field: 'CPU', title: '占用CPU', width: '8%', sort: true},
+                {field: 'MEM', title: '占用物理内存', width: '8%', sort: true},
+                {field: 'TIME', title: '时间总计', width: '8%', sort: true},
                 {field: 'COMMAND', title: '进程名称'}
             ]],
             loading: true,
