--- a/src/main/resources/vm/index.vm
+++ b/src/main/resources/vm/index.vm
@@ -92,7 +92,7 @@
 <div class="layui-layout layui-layout-admin">
     <div class="layui-header">
         <div class="layui-logo">
-            Jpom项目管理系统
+            Jpom项目管理系统($version)
         </div>
         <ul class="layui-nav layui-layout-left">
             #if($safeMode)
