--- a/src/main/resources/vm/welcome.vm
+++ b/src/main/resources/vm/welcome.vm
@@ -32,10 +32,6 @@
             font-size: 23px;
         }
 
-        .titl {
-            width: 100px;
-        }
-
         .layui-inline {
             width: 200px;
         }
@@ -60,7 +56,7 @@
 <body>
 <form action="" class="layui-form" id="form">
     <div class="layui-inline">
-        <label class="layui-form-label titl">是否开启监听</label>
+        <label class="layui-form-label">自动刷新</label>
         <div class="layui-input-block">
             <input type="checkbox" lay-filter="filter" id="monitor" lay-skin="switch" lay-text="开启|关闭">
         </div>
