取消，webHook 配置no, 解决配置JVM、Args 获取不到项目运行状态 创建新判断id是否被占用

--- a/src/main/resources/vm/manage/editProject.vm
+++ b/src/main/resources/vm/manage/editProject.vm
@@ -48,8 +48,8 @@
             <div class="layui-inline">
                 <label class="layui-form-label">MainClass</label>
                 <div class="layui-input-block">
-                    <input type="text" name="mainClass" placeholder="程序运行的 main 类" required
-                           lay-verify="required" class="layui-input" value="#if($item)$!item.mainClass#end">
+                    <input type="text" name="mainClass" placeholder="程序运行的 main 类(jar模式运行可以不填)" class="layui-input"
+                           value="#if($item)$!item.mainClass#end">
                 </div>
             </div>
 
@@ -109,22 +109,6 @@
         </div>
         <div class="layui-form-item">
             <div class="layui-inline">
-                <label class="layui-form-label">Jvm参数</label>
-                <div class="layui-input-block">
-                    <input type="text" name="jvm" placeholder="jvm参数,非必填" class="layui-input"
-                           value="#if($item)$!item.jvm#end">
-                </div>
-            </div>
-            <div class="layui-inline">
-                <label class="layui-form-label">args</label>
-                <div class="layui-input-block">
-                    <input type="text" name="args" placeholder="Main函数 args参数,非必填" class="layui-input"
-                           value="#if($item)$!item.args#end">
-                </div>
-            </div>
-        </div>
-        <div class="layui-form-item">
-            <div class="layui-inline">
                 <label class="layui-form-label">WebHooks</label>
                 <div class="layui-input-block">
                     <input type="text" name="token" placeholder="关闭程序时自动请求,非必填" class="layui-input"
@@ -136,6 +120,22 @@
                 <div class="layui-input-block">
                     <input type="text" name="buildTag" placeholder="CodePipeline发布后oss中的文件标识,非必填" class="layui-input"
                            value="#if($item)$!item.buildTag#end">
+                </div>
+            </div>
+        </div>
+        <div class="layui-form-item">
+            <div class="layui-inline">
+                <label class="layui-form-label">Jvm参数</label>
+                <div class="layui-input-block">
+                    <textarea name="jvm" placeholder="jvm参数,非必填"
+                              class="layui-textarea">#if($item)$!item.jvm#end</textarea>
+                </div>
+            </div>
+            <div class="layui-inline">
+                <label class="layui-form-label">args参数</label>
+                <div class="layui-input-block">
+                    <textarea name="args" placeholder="Main函数 args参数,非必填"
+                              class="layui-textarea">#if($item)$!item.args#end</textarea>
                 </div>
             </div>
         </div>
