--- a/src/main/resources/vm/index.vm
+++ b/src/main/resources/vm/index.vm
@@ -92,7 +92,7 @@
 <div class="layui-layout layui-layout-admin">
     <div class="layui-header">
         <div class="layui-logo" title="$!jpomManifest.timeStamp">
-            Jpom项目管理系统#if($jpomManifest)($jpomManifest.version)#end
+            Jpom项目管理系统#if($jpomManifest)<font style="font-size: 10px;">($jpomManifest.version)</font>#end
         </div>
         <ul class="layui-nav layui-layout-left">
             #if($safeMode)
