--- a/src/main/resources/vm/system/nginx.vm
+++ b/src/main/resources/vm/system/nginx.vm
@@ -153,7 +153,7 @@
             id: 'tab_ngx',
             elem: '#tab_ngx',
             url: '/system/nginx/list',
-            height: 'full-52',
+            // height: 'full-52',
             even: true,
             cols: [[
                 {field: 'name', title: '文件名'},
@@ -186,7 +186,7 @@
                         if (200 == data.code) {
                             layer.msg('删除成功！');
                             // 刷新项目列表
-                            table.reload('tab_ngx', {height: 'full-52'});
+                            table.reload('tab_ngx', {});
                         } else {
                             layer.msg(data.msg);
                         }
