--- a/src/main/resources/vm/login.vm
+++ b/src/main/resources/vm/login.vm
@@ -47,7 +47,7 @@
                 </div>
                 <div class="layui-form-item" id="randCodeDiv" style="display: none;">
                     <div class="layui-input-inline" style="margin-left: 0px;">
-                        <input type="text" name="code" placeholder="请输入验证码" autocomplete="off"
+                        <input type="text" name="code" placeholder="请输入4位验证码" autocomplete="off"
                                class="layui-input">
                     </div>
                     <div class="layui-form-mid layui-word-aux" onclick="showCode();"
